--- a/contato.html
+++ b/contato.html
@@ -31,12 +31,10 @@
         </nav>
 </header>
 			
-		<div class="conteudo-titulo">
-			
-		</div>
+		
 		
 	</div>
-
+	<div class="tabel">
 	<div class="conteudo">
 		<table class="table">
 			<thead>
@@ -99,7 +97,7 @@
 		</table>
 		
 	</div>
-    
+</div>
 </body>
     
 </html>
