--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
           </div>
         <div class="conteudo7">
           <h3>Conheça Itá</h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/58eEfE4xX2c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/58eEfE4xX2c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="90%"></iframe>
           <h3>História da cidade</h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/K-O6Mej8JjU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/K-O6Mej8JjU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="90%"></iframe>
           <h3>Hino oficial</h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/evDP-m3czQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/evDP-m3czQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="90%"></iframe>
         </div>
         </div>
         <div class="audio">
