--- a/thermas.html
+++ b/thermas.html
@@ -38,7 +38,7 @@
         <div class="bloquinho2">
         <div class="conteudo3">
             <div class="video1">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wntFJcJK1_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="90%"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wntFJcJK1_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
         </div>
         </div>
         <div class="conteudo4">
