--- a/thermas.html
+++ b/thermas.html
@@ -38,8 +38,8 @@
         <div class="bloquinho2">
         <div class="conteudo3">
             <div class="video1">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wntFJcJK1_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
-        </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wntFJcJK1_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="iframe"></iframe></div>
+        
         </div>
         <div class="conteudo4">
             <div class="titob"><h3>Toboágua</h3></div>
