--- a/index.html
+++ b/index.html
@@ -64,16 +64,14 @@
           <p>A cidade apresenta boa estrutura para receber turistas. Depois da reconstrução, foram feitos investimentos no turismo rural, aquático e infraestrutura.</p>
           </div>
         <div class="conteudo7">
-
           <h3>Conheça Itá</h3>
-          <div class="video01">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/58eEfE4xX2c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe></div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/58eEfE4xX2c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="iframe"></iframe>
+          
           <h3>História da cidade</h3>
-          <div class="video01">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/K-O6Mej8JjU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe></div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/K-O6Mej8JjU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="iframe" ></iframe>
+          
           <h3>Hino oficial</h3>
-          <div class="video01">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/evDP-m3czQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe></div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/evDP-m3czQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="iframe"></iframe></div>
         </div>
         </div>
         <div class="audio">
